Fixes vertical align bug with ie11
Set container height with "height" instead of "min-height" to
avoid ie11 flexbox bug with "align-items"

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -10,7 +10,7 @@ body {
 }
 
 .mainContainer {
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
